[tool.poetry]
name = "cipher_ky2458"
version = "0.1.0"
description = "Each letter is replaced by a letter some fixed number of positions down the alphabet."
authors = ["Kun Yao"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
